[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fontes/Minecraftia-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/Estrelas.png" type="Texture" id=2]
[ext_resource path="res://Sprites/FinalFeedbackScreen.png" type="Texture" id=3]
[ext_resource path="res://Scripts/FeedbackScreen.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 1 )

[node name="FeedbackScreen" type="Node2D"]
script = ExtResource( 4 )

[node name="FinalFeedbackScreen" type="Sprite" parent="."]
position = Vector2( 320, 180 )
texture = ExtResource( 3 )

[node name="Star1" type="Sprite" parent="FinalFeedbackScreen"]
position = Vector2( -19, -26 )
texture = ExtResource( 2 )
hframes = 6

[node name="Star2" type="Sprite" parent="FinalFeedbackScreen"]
position = Vector2( -19, 26 )
texture = ExtResource( 2 )
hframes = 6

[node name="Star3" type="Sprite" parent="FinalFeedbackScreen"]
position = Vector2( -19, 78 )
texture = ExtResource( 2 )
hframes = 6

[node name="Star4" type="Sprite" parent="FinalFeedbackScreen"]
position = Vector2( -19, 130 )
texture = ExtResource( 2 )
hframes = 6

[node name="Title" type="Label" parent="FinalFeedbackScreen"]
margin_left = -207.0
margin_top = -154.0
margin_right = 221.0
margin_bottom = -132.0
custom_fonts/font = SubResource( 1 )
text = "PARABÉNS! VOCÊ CONCLUIU TODAS AS TAREFAS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EngenhariaDeSoftware" type="Label" parent="FinalFeedbackScreen"]
margin_left = -223.0
margin_top = -42.0
margin_right = -106.0
margin_bottom = -28.0
custom_fonts/font = SubResource( 2 )
text = "Engenharia de software"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreFinal" type="Label" parent="FinalFeedbackScreen/EngenhariaDeSoftware"]
margin_top = 11.0
margin_right = 56.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.376471, 0.992157, 0.180392, 1 )
custom_fonts/font = SubResource( 3 )
text = "Score final:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NivelSatisfacao" type="Label" parent="FinalFeedbackScreen/EngenhariaDeSoftware"]
margin_top = 22.0
margin_right = 134.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.976471, 0.964706, 0.309804, 1 )
custom_fonts/font = SubResource( 3 )
text = "Nivel de satisfação:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SistemaDeInformacao" type="Label" parent="FinalFeedbackScreen"]
margin_left = -223.0
margin_top = 9.0
margin_right = -106.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
text = "Sistema de informação"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreFinal" type="Label" parent="FinalFeedbackScreen/SistemaDeInformacao"]
margin_top = 11.0
margin_right = 56.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.376471, 0.992157, 0.180392, 1 )
custom_fonts/font = SubResource( 3 )
text = "Score final:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NivelSatisfacao" type="Label" parent="FinalFeedbackScreen/SistemaDeInformacao"]
margin_top = 22.0
margin_right = 94.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.976471, 0.964706, 0.309804, 1 )
custom_fonts/font = SubResource( 3 )
text = "Nivel de satisfação:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CienciaDaComputacao" type="Label" parent="FinalFeedbackScreen"]
margin_left = -223.0
margin_top = 61.0
margin_right = -106.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 2 )
text = "Ciência da computação"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreFinal" type="Label" parent="FinalFeedbackScreen/CienciaDaComputacao"]
margin_top = 11.0
margin_right = 56.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.376471, 0.992157, 0.180392, 1 )
custom_fonts/font = SubResource( 3 )
text = "Score final:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NivelSatisfacao" type="Label" parent="FinalFeedbackScreen/CienciaDaComputacao"]
margin_top = 22.0
margin_right = 94.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.976471, 0.964706, 0.309804, 1 )
custom_fonts/font = SubResource( 3 )
text = "Nivel de satisfação:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EngenhariaDaComputacao" type="Label" parent="FinalFeedbackScreen"]
margin_left = -223.0
margin_top = 113.0
margin_right = -106.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 2 )
text = "Engenharia da computação"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreFinal" type="Label" parent="FinalFeedbackScreen/EngenhariaDaComputacao"]
margin_top = 11.0
margin_right = 56.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.376471, 0.992157, 0.180392, 1 )
custom_fonts/font = SubResource( 3 )
text = "Score final:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NivelSatisfacao" type="Label" parent="FinalFeedbackScreen/EngenhariaDaComputacao"]
margin_top = 22.0
margin_right = 94.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.976471, 0.964706, 0.309804, 1 )
custom_fonts/font = SubResource( 3 )
text = "Nivel de satisfação:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgainLabel" type="Label" parent="FinalFeedbackScreen"]
margin_left = 146.0
margin_top = 124.0
margin_right = 230.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 4 )
text = "Jogar Novamente"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgainButton" type="Button" parent="FinalFeedbackScreen"]
show_behind_parent = true
margin_left = 140.0
margin_top = 118.0
margin_right = 234.0
margin_bottom = 141.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="FinalFeedbackScreen/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
